--- a/css/style.css
+++ b/css/style.css
@@ -264,3 +264,25 @@ header .btn.call_us {
 .map_block .map {
   width: 100%;
 }
+
+.toTop {
+  width: 50px;
+  height: 50px;
+
+  position: fixed;
+
+  right: 15px;
+  bottom: 15px;
+  z-index: 99;
+
+  background-image: url("../images/arrow.png");
+  background-position: 50% 80%;
+  background-size: 40px 40px;
+  background-color: gray;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+}
+
+.toTop:hover {
+  cursor: pointer;
+}
