--- a/css/style.css
+++ b/css/style.css
@@ -280,6 +280,8 @@ header .btn.call_us {
   background-color: gray;
   background-repeat: no-repeat;
   border-radius: 50%;
+
+  display: none;
 }
 
 .toTop:hover {
