--- a/css/style.css
+++ b/css/style.css
@@ -42,12 +42,12 @@ header .row {
   margin-bottom: 20px;
 }
 
-header .phone {
+header .phone_number {
   font-size: 1.8rem;
   text-align: center;
 }
 
-header .phone p {
+header .phone_number p {
   margin: 0;
   padding: 0;
 }
@@ -124,6 +124,7 @@ header .btn.call_us {
 
 .filter .filter-button {
   width: 80%;
+  margin: 5px;
 }
 
 .staff_block .container-fluid {
@@ -289,4 +290,8 @@ header .btn.call_us {
 
 .toTop:hover {
   cursor: pointer;
+}
+
+.hide {
+  display: none;
 }
