--- a/css/style.css
+++ b/css/style.css
@@ -261,7 +261,7 @@ header .btn.call_us {
 .reviews_block .media {
   margin-bottom: 30px;
   padding: 10px;
-  box-shadow: 0 0 5px 0px lightblue;
+  box-shadow: 0 0 5px 0px lightgray;
 }
 
 .map_block .map {
